Center text in textarea for emotion detection

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h2>Emotion Detection (Text Based)</h2>
 
-    <textarea id="textInput" rows="2" cols="40" placeholder="Enter your text here"></textarea>
+    <textarea style="text-align: center;" id="textInput" rows="2" cols="40" placeholder="Enter your text here"></textarea>
     <br><br>
 
     <button id="btn" onclick="detectEmotion()">Detect Emotion</button>
